...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/container_custom_app_bar_include_on_fragment_open_claim"
        layout="@layout/top_custom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
...
                    app:layout_constraintBottom_toTopOf="@+id/divider1_image_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/title_text_view"
                    style="@style/card_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxWidth="220dp"
                    android:textAlignment="viewEnd"
                    app:layout_constraintBottom_toTopOf="@+id/divider1_image_view"
...
                    app:layout_constraintBottom_toTopOf="@+id/divider2_image_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider1_image_view"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/executor_name_text_view"
                    style="@style/card_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/executor_name_label_text_view"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider3_image_view"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/status_label_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#DE000000"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/status_icon_image_view"
                    app:layout_constraintEnd_toEndOf="@id/status_icon_image_view"
...
                    app:contentPadding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/status_icon_image_view">

                    <TextView
                        android:id="@+id/description_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#DE000000"
                        android:textIsSelectable="true"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
...
